tor (0.1.1.15-rc-1) experimental; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Tue, 21 Feb 2006 05:19:01 +0100

tor (0.1.1.14-alpha-1) experimental; urgency=low

  * New upstream version.
  * Include 0.1.0.17 changelog in experimental tree.
  * doc/FAQ is no longer shipped, so remove it from debian/tor.docs.

 -- Peter Palfrader <weasel@debian.org>  Tue, 21 Feb 2006 05:16:21 +0100

tor (0.1.1.13-alpha-1) experimental; urgency=low

  * New upstream version.
  * Forward port patches/02_add_debian_files_in_manpage.
  * Forward port patches/03_tor_manpage_in_section_8.
  * Create /var/run/tor on init script start if it does
    not exist already.
  * Set default ulimit -n to 8k instead of 4k in /etc/default/tor.
  * Print that we're raising the ulimit to stdout in the init script.
  * Add CVE numbers to past issues in the changelog where applicable.

 -- Peter Palfrader <weasel@debian.org>  Fri, 10 Feb 2006 14:38:11 +0100

tor (0.1.1.12-alpha-1) experimental; urgency=low

  * New upstream version, that was a quick one. :)
  * Forward port patches/02_add_debian_files_in_manpage.

 -- Peter Palfrader <weasel@debian.org>  Thu, 12 Jan 2006 02:53:27 +0100

tor (0.1.1.11-alpha-1) experimental; urgency=low

  * New upstream version.
    - Implement "entry guards": automatically choose a handful of entry
      nodes and stick with them for all circuits.  This will increase
      security dramatically against certain end-point attacks
      (closes: #349283, CVE-2006-0414).
  * Forward port patches/07_log_to_file_by_default.
  * Forward port 0.1.0.16 changelog and change to copyright file.

 -- Peter Palfrader <weasel@debian.org>  Wed, 11 Jan 2006 12:08:25 +0100

tor (0.1.1.10-alpha-1) experimental; urgency=low

  * New upstream version.
  * doc/tor-doc.css and doc/tor-doc.html are no longer in the upstream
    tarball, remove them from debian/tor.docs.
  * add the following new files to tor.docs: doc/socks-extensions.txt,